--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,5 +7,4 @@
     <meta name="title" content="TouchTribe webshop">
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/script.js" defer></script>
-    <title>Document</title>
-</head>
+    <title><%= title %></title>
