--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,12 +1,15 @@
 /* Mobile Menu */
 
 #mobile-menu {
-    background-color: #1a1a1a;
+    background-color: #121212b3;
     height: 5em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 2em;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%;
 }
 
 #mobile-items {
