JK - Added sizes for future

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,6 +24,7 @@
                         <table>
                             <tbody>
                                 <tr>
+                                    <% console.log(item.fields.size.sys.id) %>
                                     <th>XS</th>
                                     <th>S</th>
                                     <th>M</th>
