--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,19 +8,20 @@
 
 <main>
     <body>
-        <section id="highlighted-item">
+        <section class="highlighted-product">
             <% products[0].items.slice(0, 1).forEach(item => { %>
-                <section id="item-picture">
+                <section class="h-product-img">
                     <img src="/assets/IMG_test.jpeg" alt="">
                 </section>
-                <section id="item-info">
-                    <div class="title-and-price">
+                <section class="h-product-info">
+                    <div class="h-title-and-price">
                         <h2><%= item.fields.title %></h2>
                         <span>25 tokens</span>
                     </div>
-                    <div class="description">
+                    <div class="h-description">
                         <p><%= item.fields.description %></p>
                     </div>
+                    <div class="size-and-add">
                         <table>
                             <tbody>
                                 <tr>
@@ -32,29 +33,58 @@
                                 </tr>
                             </tbody>
                         </table>
-                    <div class="add-item">
-                        <p>Toevoegen aan winkelwagen</p> 
+                    <!-- <div class="h-add-product"> -->
+                        <!-- <p>Toevoegen aan winkelwagen</p>  -->
                         <button id="cartBtn" onclick="addCart()">
                             <svg width="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M6.29977 5H21L19 12H7.37671M20 16H8L6 3H3M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </button>
-                    </div>
+                    <!-- </div> -->
                 </section>
-                <% console.log("Dit is test", item.fields.title) %>
+                <% console.log("Dit is het product :", item.fields.title) %>
             <%})%>
         </section>
 
-        <section id="products">
-            <div>
-                <% products[0].items.forEach(item => { %>
-                    <% console.log("Dit is test", item.fields.title) %>
-                    <img src="/assets/IMG_test2.jpeg" alt="" width="100%">
-                    <%= item.fields.title %>
-                    <%= item.fields.description %>
-                <%})%>
-                <!-- <img src="/assets/IMG_test2.jpeg" alt="" width="100%"> -->
-            </div>
+        <section class="products">
+            <section class="products-container">
+            <% products[0].items.forEach(item => { %>
+            <article class="product">
+                <section class="product-img">
+                    <img src="/assets/IMG_test2.jpeg" alt="">
+                </section>
+                <section class="product-info">
+                    <div class="title-and-price">
+                        <h2><%= item.fields.title %></h2>
+                        <span>25 tokens</span>
+                    </div>
+                    <div class="product-description">
+                        <p><%= item.fields.description %></p>
+                    </div>
+                    <div class="size-and-add">
+                        <table class="product-sizes">
+                            <tbody>
+                                <tr>
+                                    <% console.log(item.fields.size.sys.id) %>
+                                    <th>XS</th>
+                                    <th>S</th>
+                                    <th>M</th>
+                                    <th>L</th>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="add-product">
+                            <button id="cartBtn" onclick="addCart()">
+                                <svg width="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6.29977 5H21L19 12H7.37671M20 16H8L6 3H3M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                </svg>
+                            </button>
+                        </div>
+                    </div>
+                </section>
+            </article>
+            <%})%>
+        </section>
         </section>
     </body>
 </main>
