--- a/views/partials/mobile-navbar.ejs
+++ b/views/partials/mobile-navbar.ejs
@@ -2,9 +2,9 @@
 
 </head>
 
-<nav id="mobile-menu">
+<nav class="mobile-menu">
 
-    <section id="mobile-items">
+    <section class="mobile-items">
     <img id="item1" src="https://www.touchtribe.nl/static/images/touchtribe-mark.svg" alt="" width="20">
     <img id="item2" src="https://www.touchtribe.nl/static/images/touchtribe-logo.svg" alt="" width="135">
     <button id="item3" class="menu-icon" aria-label="Open Menu">
