Show all except for first product fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 
         <section class="products" id="products">
             <section class="products-container">
-            <% products[0].items.forEach(item => { %>
+                <% products[0].items.slice(1).forEach(item => { %>
             <article class="product">
                 <section class="product-img">
                     <img src="/assets/IMG_test2.jpeg" alt="">
