--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -125,7 +125,7 @@ main {
         padding: 2.5em 2.5em;
 
         .product {
-            border: 1px dashed; /* to check size */
+            border: 1px dashed; /* check size of boxes */
         }
 
         .product-img {
@@ -300,6 +300,18 @@ main {
     /* #endregion */
 
     /* #region rest of products styling */
+
+    .products-container{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding: calc(2.5em + 2em);
+    }
+
+    .product {
+        width: 30%;
+        
+    }
 
     
 }
