--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -121,9 +121,9 @@ main {
 .products {
     background-color: rgb(246, 246, 246);
 }
-    .products-container{
+    .products-container {
         padding: 2.5em 2.5em;
-
+        
         .product {
             border: 1px dashed; /* check size of boxes */
         }
@@ -203,6 +203,7 @@ main {
                 margin-left: 2.5em;
                 border: 1px solid rgb(103, 103, 103);
                 padding: 12.5px;
+                background-color: inherit;
 
             }
             #cartBtn:hover {
@@ -306,6 +307,10 @@ main {
         flex-wrap: wrap;
         justify-content: space-between;
         padding: calc(2.5em + 2em);
+
+        .title-and-price span{
+            font-weight:normal;
+        }
     }
 
     .product {
