PE scroll progress bar
CSS scroll driven animation progress bar with color change halfway.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
 
 <main>
     <body>
+        <div class="progress"></div>
         <section class="highlighted-product">
             <% products[0].items.slice(0, 1).forEach(item => { %>
                 <section class="h-product-img">
