--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,6 +22,23 @@ main {
     margin-top: 5em;
 }
 
+/* PE */
+@supports(animation-timeline: scroll()){
+
+    .progress {
+        animation:
+        scaleProgress auto linear,
+        colorChange auto linear;
+        animation-timeline: scroll(root);
+        position: fixed;
+        left: 0; bottom: 0;
+        width: 100%; height: .5em;
+        background: var(--accent-color-purple);
+        transform-origin: 0 50%;
+    }
+
+}
+
 /* #region Highlighted-item styling */
 
 
@@ -264,6 +281,7 @@ main {
     }
 
     .h-description > p {
+        font-size: 1.5em;
         margin: 1.8em 0;
     }
 
@@ -383,4 +401,24 @@ main {
         background-position: 0 50%;
     }
 }
+
+@keyframes scaleProgress {
+    0% {
+      transform: scaleX(0);
+    }
+    100% {
+      transform: scaleX(1);
+    }
+}
+
+@keyframes colorChange {
+
+    50% {
+      background-color: var(--accent-color-purple);
+    }
+    100% {
+      background-color: var(--accent-color-green);
+    }
+}
+  
   /* #endregion */
