--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,14 +23,16 @@
                         <p><%= item.fields.description %></p>
                     </div>
                     <div class="size-and-add">
+                    <form action="">
                         <table>
                             <tbody>
                                 <tr>
+                                    <th><button onclick="selectSize('...')">XS</button></th>
+                                    <th><button onclick="selectSize('...')">S</button></th>
+                                    <th><button onclick="selectSize('...')">M</button></th>
+                                    <th><button onclick="selectSize('...')">L</button></th>
+                    
                                     <% console.log(item.fields.size.sys.id) %>
-                                    <th>XS</th>
-                                    <th>S</th>
-                                    <th>M</th>
-                                    <th>L</th>
                                 </tr>
                             </tbody>
                         </table>
@@ -39,6 +41,7 @@
                             <path d="M6.29977 5H21L19 12H7.37671M20 16H8L6 3H3M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
                         </button>
+                    </form>
                     </div>
                     <section class="more-products-cta">
                         <a class="tp-to-product" href="#products">
