Small performance fix

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <section class="highlighted-product">
             <% products[0].items.slice(0, 1).forEach(item => { %>
                 <section class="h-product-img">
-                    <img src="/assets/IMG_test.jpeg" alt="">
+                    <img src="/assets/IMG_test.jpeg" alt="" loading="lazy">
                 </section>
                 <section class="h-product-info">
                     <div class="h-title-and-price">
