Server combined product fix

--- a/views/test.ejs
+++ b/views/test.ejs
@@ -24,7 +24,7 @@
 
 
 <body>
-    <h1>Testground</h1>
+    <h1>Test data</h1>
 
     <section class="container">
         <section class="all-products">
