--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,17 +10,18 @@
     <body>
         <div class="progress"></div>
         <section class="highlighted-product">
-            <% products[0].items.slice(0, 1).forEach(item => { %>
+            <% products.slice(0, 1).forEach(product => { %>
                 <section class="h-product-img">
                     <img src="/assets/IMG_test.jpeg" alt="" loading="lazy">
+                    <% console.log(product.size) %>
                 </section>
                 <section class="h-product-info">
                     <div class="h-title-and-price">
-                        <h2><%= item.fields.title %></h2>
+                        <h2><%= product.name %></h2>
                         <span>25 tokens</span>
                     </div>
                     <div class="h-description">
-                        <p><%= item.fields.description %></p>
+                        <p><%= product.description %></p>
                     </div>
                     <div class="size-and-add">
                         <table>
@@ -55,18 +56,18 @@
 
         <section class="products" id="products">
             <section class="products-container">
-                <% products[0].items.slice(1).forEach(item => { %>
+                <% products.slice(1).forEach(product => { %>
             <article class="product">
                 <section class="product-img">
                     <img src="/assets/IMG_test2.jpeg" alt="">
                 </section>
                 <section class="product-info">
                     <div class="title-and-price">
-                        <h2><%= item.fields.title %></h2>
+                        <h2><%= product.name %></h2>
                         <span>25 tokens</span>
                     </div>
                     <div class="product-description">
-                        <p><%= item.fields.description %></p>
+                        <p><%= product.description %></p>
                     </div>
                     <div class="size-and-add">
                         <table class="product-sizes">
