--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
                                 </tr>
                             </tbody>
                         </table>
-                        <button id="cartBtn" onclick="addCart()" aria-label="Add to shopping cart" role="button">
+                        <button class="cartBtn" onclick="addCart()" aria-label="Add to shopping cart" role="button">
                             <svg width="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M6.29977 5H21L19 12H7.37671M20 16H8L6 3H3M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                             </svg>
@@ -45,12 +45,12 @@
                     </div>
                     <section class="more-products-cta">
                         <a class="tp-to-product" href="#products">
-                        <button class="moreProductsBtn">
+                        <button class="moreProductsBtn" aria-label="See more products" role="button">
                             <svg width="15" height="15" viewBox="0 0 12 15" fill="" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.0629883 3.17131L1.93707 0.828705L6.00003 4.07801L10.063 0.828705L11.9371 3.17131L6.00003 7.92095L0.0629883 3.17131ZM0.0629883 10.1713L1.93707 7.8287L6.00003 11.078L10.063 7.8287L11.9371 10.1713L6.00003 14.9209L0.0629883 10.1713Z" fill="white"/>
                             </svg>
                         </button>
-                        <p>Bekijk meer producten</p>
+                        <p >Bekijk meer producten</p>
                         </a>
                     </section>
                 </section>
@@ -88,7 +88,7 @@
                             </tbody>
                         </table>
                         <div class="add-product">
-                            <button id="cartBtn" onclick="addCart()" aria-label="Add to shopping cart" role="button">
+                            <button class="cartBtn" onclick="addCart()" aria-label="Add to shopping cart" role="button">
                                 <svg width="25" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6.29977 5H21L19 12H7.37671M20 16H8L6 3H3M9 20C9 20.5523 8.55228 21 8 21C7.44772 21 7 20.5523 7 20C7 19.4477 7.44772 19 8 19C8.55228 19 9 19.4477 9 20ZM20 20C20 20.5523 19.5523 21 19 21C18.4477 21 18 20.5523 18 20C18 19.4477 18.4477 19 19 19C19.5523 19 20 19.4477 20 20Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                                 </svg>
