--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                     <picture>
                         <source srcset="/assets/IMG_test.webp" type="image/webp">
                         <source srcset="/assets/IMG_test.avif" type="image/avif">
-                        <img src="/assets/IMG_test.jpeg" loading="lazy">
+                        <img src="/assets/IMG_test.jpeg" loading="lazy" alt="<%= product.name %>">
                     </picture>
                 </section>
                 <section class="h-product-info">
@@ -65,7 +65,7 @@
                     <picture>
                         <source srcset="/assets/IMG_test2.webp" type="image/webp">
                         <source srcset="/assets/IMG_test2.avif" type="image/avif">
-                        <img src="/assets/IMG_test2.jpeg" alt="" loading="lazy">
+                        <img src="/assets/IMG_test2.jpeg" alt="" loading="lazy" alt="<%= product.name %>">
                     </picture>
                 </section>
                 <section class="product-info">
