--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -191,7 +191,7 @@ main {
         .product-description > p {
             font-weight: lighter;
             font-size: 1.3em;
-            color: #8C8C8C;
+            color: #4e4e4e;
             margin: 1em 0;
         }
 
