--- a/views/index.ejs
+++ b/views/index.ejs
@@ -65,7 +65,7 @@
                     <picture>
                         <source srcset="/assets/IMG_test2.webp" type="image/webp">
                         <source srcset="/assets/IMG_test2.avif" type="image/avif">
-                        <img src="/assets/IMG_test2.jpeg" alt="" loading="lazy" alt="<%= product.name %>">
+                        <img src="/assets/IMG_test2.jpeg" alt="" loading="lazy" alt="<%= product.name %>" width="500">
                     </picture>
                 </section>
                 <section class="product-info">
