--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Jason">
     <meta name="title" content="TouchTribe webshop">
-    <meta name="description" content="This website provides a webshop where TouchTribe can
-     buy merchandise with their deserved tokens">
+    <meta name="description" content="This website provides a webshop where TouchTribe employees can
+     purchase merchandise with their deserved tokens">
     <link rel="stylesheet" href="/styles/main.css">
     <script src="/scripts/script.js" defer></script>
     <title><%= title %></title>
