Text change on browser lang preference

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M0.0629883 3.17131L1.93707 0.828705L6.00003 4.07801L10.063 0.828705L11.9371 3.17131L6.00003 7.92095L0.0629883 3.17131ZM0.0629883 10.1713L1.93707 7.8287L6.00003 11.078L10.063 7.8287L11.9371 10.1713L6.00003 14.9209L0.0629883 10.1713Z" fill="white"/>
                             </svg>
                         </button>
-                        <p>See more products</p>
+                            <label id="see-more-products" data-en="See more products" data-nl="Bekijk meer producten" data-es="Ver más productos" data-fr="Voir plus de produits">Bekijk meer producten</label>
                         </a>
                     </section>
                 </section>
