--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -21,6 +21,7 @@ body {
 
 main {
     --default-spacing : 1em;
+    --large-spacing : 2.5em;
     margin-top: 5em;
 }
 
@@ -75,7 +76,7 @@ main {
     .h-title-and-price span {
         font-size: 1.7em;
         font-weight: lighter;
-        align-self: flex-end; /* Aligns the span to the bottom */
+        align-self: flex-end;
     }
 
     /* Description styling */
@@ -156,7 +157,7 @@ main {
     background-color: rgb(246, 246, 246);
 }
     .products-container {
-        padding: 2.5em 2.5em;
+        padding: var(--large-spacing) var(--large-spacing);
 
         .product-img {
             width: 100%;
@@ -230,7 +231,7 @@ main {
 
             /* Button styling */
             .cartBtn {
-                margin-left: 2.5em;
+                margin-left: var(--large-spacing);
                 border: 1px solid rgb(103, 103, 103);
                 padding: 12.5px;
                 background-color: inherit;
@@ -256,7 +257,7 @@ main {
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: calc(2.5em);
+        padding: var(--large-spacing);
 
     }
 
@@ -317,7 +318,7 @@ main {
     .more-products-cta{
         display: flex;
         align-items: center;
-        margin-top: auto; /* Push the cta to the bottom */
+        margin-top: auto;
     }
 
     .tp-to-product {
@@ -356,7 +357,7 @@ main {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        padding: calc(2.5em + 2em);
+        padding: calc(var(--large-spacing) + 2em);
 
         .title-and-price span{
             font-weight: normal;
