--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -25,20 +25,29 @@ main {
     margin-top: 5em;
 }
 
-@supports(animation-timeline: scroll()){
+@media (prefers-reduced-motion: no-preference) {
+    
+    @supports(animation-timeline: scroll()){
 
-    .progress {
-        animation:
-        scaleProgress auto linear,
-        colorChange auto linear;
-        animation-timeline: scroll(root);
-        position: fixed;
-        left: 0; bottom: 0;
-        width: 100%; height: .5em;
-        background: var(--accent-color-purple);
-        transform-origin: 0 50%;
+        .progress {
+            animation:
+            scaleProgress auto linear,
+            colorChange auto linear;
+            animation-timeline: scroll(root);
+            position: fixed;
+            left: 0; bottom: 0;
+            width: 100%; height: .5em;
+            background: var(--accent-color-purple);
+            transform-origin: 0 50%;
+        }
     }
+}
 
+@media (prefers-reduced-motion: reduce) {
+    
+    .progress{
+        display: none;
+    }
 }
 
 /* #region Highlighted-item styling */
@@ -337,16 +346,35 @@ main {
         transition: .15s ease-in;
     }
 
-    .moreProductsBtn {
-        border: 1px solid var(--accent-color-green);
-        padding: 1.5em;
-        animation: jump 2s infinite;
+
+    @media (prefers-reduced-motion: no-preference) {
+
+        .moreProductsBtn {
+            border: 1px solid var(--accent-color-green);
+            padding: 1.5em;
+            animation: jump 2s infinite;
+        }
+    }
+
+
+    @media (prefers-reduced-motion: reduce){
+
+        .moreProductsBtn {
+            border: 1px solid var(--accent-color-green);
+            padding: 1.5em;
+        }
+
     }
 
     .moreProductsBtn:hover {
         background-color: var(--accent-color-green);
         transition: .15s ease-in;
+
+        svg path {
+            fill: black;
+        }
     }
+
 
     /* #endregion */
 
