--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -1,7 +1,7 @@
 /* Mobile Menu */
 
 .mobile-menu {
-    background-color: #121212b3; /* gradient version of main */
+    background-color: #121212b3; /* gradient version of main color */
     height: 5em;
     display: flex;
     justify-content: space-between;
@@ -30,8 +30,6 @@
     align-items: center;
 }
 
-
-
 button {
     background: inherit;
     border: none;
@@ -39,6 +37,11 @@ button {
 
 .menu-icon svg path{
     stroke: #fff;
+}
+
+.website-link {
+    color: inherit;
+    text-decoration: none;
 }
 
 @media (min-width: 62.5em){
