--- a/views/partials/mobile-navbar.ejs
+++ b/views/partials/mobile-navbar.ejs
@@ -9,7 +9,7 @@
         <img class="logo-img" src="https://www.touchtribe.nl/static/images/touchtribe-mark.svg" alt="" width="20">
         <img class="logo-text" src="https://www.touchtribe.nl/static/images/touchtribe-logo.svg" alt="" width="135">
     </a>
-    <button id="item3" class="menu-icon" aria-label="Open Menu">
+    <button class="menu-icon" aria-label="Open Menu">
         <svg width="30" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M20 7L4 7" stroke="#1C274C" stroke-width="2" stroke-linecap="round"/>
             <path d="M20 12L4 12" stroke="#1C274C" stroke-width="2" stroke-linecap="round"/>
