--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -1,4 +1,15 @@
-<footer>
+<link rel="stylesheet" href="/styles/foot.css">
 
+</head>
+
+<footer>
+    <section class="motivation">
+        <h3 class="motivation-title">Not Enough tokens yet?</h3>
+        <p class="motivation-description">Don't worry! Keep up the great work and you'll be redeeming these awesome products in no time. Your dedication and effort are truly appreciated, and every task completed brings you closer to your desired rewards.</p>
+    </section>
+    <section class="feedback">
+        <h3 class="feedback-title">Your opinion matters!</h3>
+        <p class="feedback-description">Is there something you’d love to see in our rewards catalog? Let us know! We value your feedback and strive to offer rewards that you truly desire. Submit your suggestions in our slack channel.</p>
+    </section>
 </footer>
 </html>
