--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -95,7 +95,7 @@ main {
         color: rgb(204, 205, 206);
         margin: var(--default-spacing) 0;
         letter-spacing: 1.05px;
-
+        line-height: 1.3;
     }
 
     .size-and-add {
@@ -207,7 +207,7 @@ main {
             color: #4e4e4e;
             margin: var(--default-spacing) 0;
             letter-spacing: 1.05px;
-
+            line-height: 1.3;
         }
 
         /* Table styling */
