--- a/public/styles/foot.css
+++ b/public/styles/foot.css
@@ -1,8 +1,61 @@
 /*stylin that bihh*/
 
 
-footer {
-    margin: 1em;
-
+footer section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1.8em; /* Adjust as needed */
 }
 
+footer .container {
+    align-items: center;
+}
+
+.motivation {
+    background-color: var(--accent-color-green);
+}
+.container{
+    padding: 1.5em;
+}
+
+.motivation-title, .feedback-title{
+    font-size: 26px;
+    font-weight: 500;
+    margin-bottom: 8px;
+}
+
+.feedback-txt, .motivation-txt {
+    font-weight: 300;
+    font-size: 20px;
+    line-height: 1.2; 
+    letter-spacing: 1.05px;
+}
+
+.feedback{
+    color: var(--white);
+}
+
+
+@media (min-width: 62.5em){
+
+    footer{
+        display: flex;
+        flex-direction: row;
+    }
+
+    footer section{
+        padding: 5.5em;
+        align-items: center;
+        flex: 1; /* equal width */
+    }
+
+    .motivation-title, .feedback-title{
+        font-size: 34px;
+        margin-bottom: 10px;
+    }
+
+    .feedback-txt, .motivation-txt {
+        font-size: 20px;
+    }
+}
