--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -8,5 +8,6 @@
     <meta name="description" content="This website provides a webshop where TouchTribe employees can
      purchase merchandise with their deserved tokens">
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/foot.css">
     <script src="/scripts/script.js" defer></script>
     <title><%= title %></title>
